# resume-chatbot

./: .gitignore  docker-compose.yml  main.py  ollama-entrypoint.sh  pyproject.toml
app/config/: config.py
app/core/: agent.py
scripts/: ollama-init.sh
